修正程式因章節名稱中斷的錯誤

--- a/CZBookCrawler/CZBookCrawler.csproj
+++ b/CZBookCrawler/CZBookCrawler.csproj
@@ -105,6 +105,7 @@
   <ItemGroup>
     <Compile Include="Crawler.cs" />
     <Compile Include="DataBase.cs" />
+    <Compile Include="ExceptionCatch.cs" />
     <Compile Include="frmBase.cs">
       <SubType>Form</SubType>
     </Compile>
