--- a/CZBookCrawler/packages.config
+++ b/CZBookCrawler/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.3.0" targetFramework="net48" />
   <package id="HtmlAgilityPack" version="1.11.26" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net48" />
   <package id="System.Data.SQLite" version="1.0.113.5" targetFramework="net48" />
   <package id="System.Data.SQLite.Core" version="1.0.113.5" targetFramework="net48" />
